# family-tree-cli

./: .gitignore  README.md  pyproject.toml
family_tree_cli/: json_data.json  main.py  service.py
family_tree_cli/model/: gender.py  person.py  relationship.py
